syntax = "proto3";
package pb;

import "base.proto";

option go_package = "api/pb";

service FinanceSvc {
  rpc CreateBill(BillRequest) returns (StateReply) {}
  rpc GetBill(BillRequest) returns (BillReply) {}
  rpc GetBills(BillRequest) returns (BillsReply) {}
  rpc DeleteBill(BillRequest) returns (StateReply) {}
  rpc GetFund(TextRequest) returns (FundReply) {}
  rpc GetStock(TextRequest) returns (StockReply) {}
}

message BillRequest {
  int64 id = 1;
  string name = 2;
}

message BillReply {
  Bill bill = 1;
}

message BillsReply {
  repeated Bill bills = 1;
}

message Bill {
  int64 id = 1;
  string date = 2;
  string payee = 3;
  string description = 4;
  float amount = 5;
  string created_at = 6;
  string updated_at = 7;
}

message BillRecord {
  int64 id = 1;
  int64 bill_id = 2;
  string posting = 3;
  float amount = 4;
}

message Assets {
  int64 id = 1;
  int64 account_id = 2;
  string name = 3;
  string category = 4;
  float balance = 5;
  string created_at = 6;
}

message Account {
  int64 id = 1;
  string name = 2;
  float balance = 3;
  string created_at = 4;
}

message FundReply {
  string code = 1;
  string name = 2;
  string type = 3;
  double net_worth = 4;
  double expect_worth = 5;
  double total_worth = 6;
  string expect_growth = 7;
  string day_growth = 8;
  string last_week_growth = 9;
  string last_month_growth = 10;
  string last_three_months_growth = 11;
  string last_six_months_growth = 12;
  string last_year_growth = 13;
  string buy_min = 14;
  string buy_source_rate = 15;
  string buy_rate = 16;
  string manager = 17;
  string fund_scale = 18;
  string net_worth_date = 19;
  string expect_worth_date = 20;
  repeated string net_worth_data_date = 21;
  repeated double net_worth_data_unit = 22;
  repeated double net_worth_data_increase = 23;
  repeated string million_copies_income_data_date = 24;
  repeated double million_copies_income_data_income = 25;
  string million_copies_income_date = 26;
  double seven_days_year_income = 27;
}

message StockReply {
  string code = 1;
  string name = 2;
  string type = 3;
  string price_change = 4;
  string change_percent = 5;
  string open = 6;
  string close = 7;
  string price = 8;
  string high = 9;
  string low = 10;
  string volume = 11;
  string turnover = 12;
  string turnover_rate = 13;
  string total_worth = 14;
  string circulation_worth = 15;
  string date = 16;
  repeated string buy = 17;
  repeated string sell = 18;
  string pb = 19;
  string spe = 20;
  string pe = 21;
}
